Author : Swathi Description: Changes related to MFRs questions

--- a/client/app/question/question.dialog/question.dialog.html
+++ b/client/app/question/question.dialog/question.dialog.html
@@ -133,13 +133,13 @@
                     </md-input-container>
                 </div>
 
-                <div layout="row" ng-if="item.qtype=='mcq'">
+                <div layout="row" ng-if="item.qtype=='mcq' || item.qtype=='freeResponse'">
                     <div class="md-block question-image-container" flex="30">
                         <input id="qimg" type="file" ng-model="questionImage" name="questionImage" base-sixty-four-input required onload="onLoad"
                             maxsize="500" accept="image/*" class="question-image-input">
                         <label for="qimg">
                             <!--<div ng-style="{'background-image': url({{item.questionImage || 'http://placehold.it/300x200'}})}"></div>-->
-                            <img ng-src="{{item.questionImages[0] || 'http://placehold.it/300x200'}}" />
+                            <img ng-if="item.questionImage[0]!=undefined" ng-src="{{item.questionImage[0] || 'http://placehold.it/300x200'}}" />
                         </label>
                     </div>
                     <md-input-container class="md-block" flex="70">
@@ -161,17 +161,25 @@
                 <div id="steps" ng-if="item.qtype=='mcq'">
                     <div ng-include src="'./app/question/question.dialog/mcq.dialog.options.html'"></div>
                 </div>
+                <div id="steps" ng-if="item.qtype=='freeResponse'">
+                    <div ng-include src="'./app/question/question.dialog/freeResponse.dialog.options.html'"></div>
+                </div>
                 <md-divider></md-divider>
-                <div layout="row">
+                <div layout="row" ng-if="item.qtype=='legacy-word-problem'">
                     <md-input-container flex>
                         <label>Hint </label>
-                        <div layout="row" ng-if="item.qtype=='legacy-word-problem'">
-                            <textarea required name="hint" rows="1" ng-model="item.hintText" md-select-on-focus></textarea>
+                        <textarea required name="hint" rows="1" ng-model="item.hintText" md-select-on-focus></textarea>
+                        <div class="input-message hint" ng-if="!questionForm.hint.$dirty">Write the hint</div>
+                        <div class="input-message error-msg" ng-messages="questionForm.hint.$error">
+                            <div ng-message="required">This is required.</div>
                         </div>
-                        <div layout="row" ng-if="item.qtype=='mcq'">
-                            <textarea required name="hint" rows="1" ng-model="item.i18n[langId][item.hintText]" md-select-on-focus></textarea>
-                        </div>
-                        <div class="input-message hint" ng-if="!questionForm.hint.$dirty">Write the step</div>
+                    </md-input-container>
+                </div>
+                <div layout="row" ng-if="item.qtype=='mcq' || item.qtype=='freeResponse'">
+                    <md-input-container flex>
+                        <label>Hint </label>
+                        <textarea required name="hint" rows="1" ng-model="item.i18n[langId][item.hintText]" md-select-on-focus></textarea>
+                        <div class="input-message hint" ng-if="!questionForm.hint.$dirty">Write the hint</div>
                         <div class="input-message error-msg" ng-messages="questionForm.hint.$error">
                             <div ng-message="required">This is required.</div>
                         </div>
