Lot of UI fixes, including image upload which was not working fine

--- a/client/app/question/question.dialog/mcq.dialog.options.html
+++ b/client/app/question/question.dialog/mcq.dialog.options.html
@@ -1,39 +1,41 @@
-<form name="optionForm" ng-controller="MCQOptionsCtrl">
-    <div layout="row" ng-repeat="option in item.options">
-        <div layout="column" flex layout-fill ng-cloak>
-            <h4 class="md-primary">Option #{{$index+1}}</h4>
-            <div layout="row">
-                <div class="md-block option-image-container" flex="30">
-                    <input id="optimg" type="file" ng-model="optionImages[$index]" name="optionImage" base-sixty-four-input required onload="onLoad"
-                        maxsize="500" accept="image/*" class="option-image-input">
-                    <label for="optimg">
+<div ng-controller="MCQOptionsCtrl">
+    <form name="optionForm">
+        <div layout="row" ng-repeat="option in item.options">
+            <div layout="column" flex layout-fill ng-cloak>
+                <h4 class="md-primary">Option #{{$index+1}}</h4>
+                <div layout="row">
+                    <div class="md-block option-image-container" flex="30">
+                        <input id="optimg" type="file" ng-model="images.optionImages[$index]" name="optionImage" base-sixty-four-input required onload="onLoad"
+                            maxsize="500" accept="image/*" class="option-image-input">
+                        <label for="optimg">
                         <img ng-src="{{option.image.base64|| 'http://placehold.it/300x200'}}" />
                     </label>
+                    </div>
+                    <md-input-container class="md-block" flex="70">
+                        <div layout="row">
+                            <md-input-container class="md-block" flex="70">
+                                <label>Option text</label>
+                                <textarea required name="option" ng-model="item.i18n[langId][option.text]" md-select-on-focus></textarea>
+                                <div class="input-message hint" ng-if="!optionForm.option.$dirty">Write the option</div>
+                            </md-input-container>
+                            <md-input-container class="md-block" flex="30">
+                                <md-checkbox class="" ng-model="option.answer">Answer</md-checkbox>
+                            </md-input-container>
+                        </div>
+                        <div layout="row">
+                            <md-input-container class="md-block" flex="50">
+                                <label>Micro Hint</label>
+                                <input name="optmh" ng-disabled="option.answer" ng-model="item.i18n[langId][option.mh]" style="color:inherit;">
+                                <div class="input-message hint" ng-if="!optionForm.optmh.$dirty">Write the Micro hint</div>
+                            </md-input-container>
+                            <md-input-container class="md-block" flex="50">
+                                <label>MMC</label>
+                                <md-chips name="optmmc" ng-model="option.mmc" readonly="option.answer" md-separator-keys="keys" placeholder="Enter a MMC"></md-chips>
+                            </md-input-container>
+                        </div>
+                    </md-input-container>
                 </div>
-                <md-input-container class="md-block" flex="70">
-                    <div layout="row">
-                        <md-input-container class="md-block" flex="70">
-                            <label>Option text</label>
-                            <textarea required name="option" ng-model="item.i18n[langId][option.text]" md-select-on-focus></textarea>
-                            <div class="input-message hint" ng-if="!optionForm.option.$dirty">Write the option</div>
-                        </md-input-container>
-                        <md-input-container class="md-block" flex="30">
-                            <md-checkbox class="" ng-model="option.answer">Answer</md-checkbox>
-                        </md-input-container>
-                    </div>
-                    <div layout="row">
-                        <md-input-container class="md-block" flex="50">
-                            <label>Micro Hint</label>
-                            <input name="optmh" ng-disabled="option.answer" ng-model="item.i18n[langId][option.mh]" style="color:inherit;">
-                            <div class="input-message hint" ng-if="!optionForm.optmh.$dirty">Write the Micro hint</div>
-                        </md-input-container>
-                        <md-input-container class="md-block" flex="50">
-                            <label>MMC</label>
-                            <md-chips name="optmmc" ng-model="option.mmc" readonly="option.answer" md-separator-keys="keys" placeholder="Enter a MMC"></md-chips>
-                        </md-input-container>
-                    </div>
-                </md-input-container>
             </div>
         </div>
-    </div>
-</form>
+    </form>
+</div>
