Fixed the question model so that the imageSchema does not include _id.

--- a/client/app/question/question.dialog/response.config.dialog.html
+++ b/client/app/question/question.dialog/response.config.dialog.html
@@ -11,7 +11,7 @@
     <md-dialog-content>
         <div class="md-dialog-content">
             <form name="responseForm">
-                <div layout="row" ng-if="item.qtype=='legacy-word-problem'">
+                <div layout="row" ng-if="qtype=='legacy-word-problem'">
                     <md-input-container flex="30">
                         <label>Correct Answer</label>
                         <input required name="correctAnswer" rows="1" ng-model="step.answer">
