--- a/client/app/question/question.dialog/question.dialog.html
+++ b/client/app/question/question.dialog/question.dialog.html
@@ -114,12 +114,11 @@
                     </md-autocomplete>
                 </div>
                 <hr />
-                <div layout="row" ng-if="item.qtype=='legacy-word-problem'">
+                <!--       <div layout="row" ng-if="item.qtype=='legacy-word-problem'">
                     <div class="md-block question-image-container" flex="30">
                         <input id="qimg" type="file" ng-model="images.qImage" name="questionImage" base-sixty-four-input required maxsize="500" accept="image/*"
                             class="question-image-input">
                         <label for="qimg">
-                            <!--<div ng-style="{'background-image': url({{item.questionImage || 'http://placehold.it/300x200'}})}"></div>-->
                             <img ng-src="{{item.questionImage[0].base64 || 'http://placehold.it/300x200'}}" />
                         </label>
                     </div>
@@ -131,9 +130,9 @@
                             <div ng-message="required">This is required.</div>
                         </div>
                     </md-input-container>
-                </div>
+                </div> -->
 
-                <div layout="row" ng-if="item.qtype=='mcq' || item.qtype=='freeResponse'">
+                <div layout="row">
                     <div class="md-block question-image-container" flex="30">
                         <input id="qimg" type="file" ng-model="images.qImage" name="questionImage" base-sixty-four-input required maxsize="500" accept="image/*"
                             class="question-image-input">
@@ -165,7 +164,7 @@
                     <div ng-include src="'app/question/question.dialog/freeResponse.dialog.options.html'"></div>
                 </div>
                 <md-divider></md-divider>
-                <div layout="row" ng-if="item.qtype=='legacy-word-problem'">
+                <!--  <div layout="row" ng-if="item.qtype=='legacy-word-problem'">
                     <md-input-container flex>
                         <label>Hint </label>
                         <textarea required name="hint" rows="1" ng-model="item.hintText" md-select-on-focus></textarea>
@@ -174,8 +173,8 @@
                             <div ng-message="required">This is required.</div>
                         </div>
                     </md-input-container>
-                </div>
-                <div layout="row" ng-if="item.qtype=='mcq' || item.qtype=='freeResponse'">
+                </div> -->
+                <div layout="row">
                     <md-input-container flex>
                         <label>Hint </label>
                         <textarea required name="hint" rows="1" ng-model="item.i18n[langId][item.hintText]" md-select-on-focus></textarea>
@@ -188,7 +187,7 @@
                 <div layout="row">
                     <md-input-container flex>
                         <label>Expressions </label>
-                        <textarea name="expressions" rows="1" ng-model="item.expressions" md-select-on-focus></textarea>
+                        <textarea name="expressions" rows="1" ng-model="item.i18n[langId][item.expressions]" md-select-on-focus></textarea>
                         <div class="input-message hint" ng-if="!questionForm.expressions.$dirty">Write expressions one line per expression</div>
                     </md-input-container>
                 </div>
