--- a/client/app/question/question.html
+++ b/client/app/question/question.html
@@ -51,10 +51,10 @@
                             <span>Updated: {{getDisplayableTime(item.updated.when)}} by {{item.updated.by}}</span> |
                             <span><b>{{item.state}}</b></span>
                         </h4>
-                        <p ng-if="item.qtype=='legacy-word-problem'">
+                        <!-- <p ng-if="item.qtype=='legacy-word-problem'">
                             {{ item.questionText | limitTo:100 }} <span ng-if="item.questionText.length > 100">...</span>
-                        </p>
-                        <p ng-if="item.qtype=='mcq' || item.qtype=='freeResponse'">
+                        </p> -->
+                        <p>
                             {{ item.i18n[langId][item.questionText] | limitTo:100 }} <span ng-if="item.questionText.length > 100">...</span>
                         </p>
                     </div>
